<resources>
    <string name="app_name">PartyTime</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="btn_login">LOGIN</string>
    <string name="prompt_password">Please enter your password</string>
    <string name="btn_link_to_register">Not a member? Get registered right now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email to sent you password reset instructions.</string>
    <string name="email_id">Email ID</string>
    <string name="profile">Profile</string>
    <string name="table">Table</string>
    <string name="about">About</string>
    <string name="my_places_list">My Places List</string>
    <string name="sign_out">Sign Out</string>
    <string name="about_text">My Places - Find NearBy Places" mobile application lets you search all Places nearby your current geolocation. It have easy to use and simple User Interface and backed up with many useful options like marking any place as "Favourite" place so that you can access the place with just one click, You can also book an UBER ride to that place via this applications + there are lots of feature packed in this application. </string>
    <string name="ok">OK</string>
    <string name="title_activity_my_places_list">MyPlacesList</string>
    <string name="title_activity_edit_my_place">EditMyPlaceActivity</string>
    <string name="show_map">Show Map</string>
    <string name="new_place">New Place</string>
    <string name="editmyplace_name_label">Name:</string>
    <string name="editmyplace_desc_label">Description:</string>
    <string name="editmyplace_cancel_label">Cancel</string>
    <string name="editmyplace_lat_label">Latitude:</string>
    <string name="editmyplace_lon_label">Longitude:</string>
    <string name="editmyplace_location_label">Get Location</string>
    <string name="title_activity_view_my_places">ViewMyPlacesActivity</string>
    <string name="viewmyplace_finished_button">OK</string>
    <string name="title_activity_my_places_maps">Map</string>
    <string name="title_activity_view_my_place">ViewMyPlaceActivity</string>
    <string name="title_activity_my_places_map">MyPlacesMapActivity</string>
    <string name="title_activity_google_maps">Map</string>
    <string name="title_activity_account_settings">AccountSettingsActivity</string>
    <string name="default_status">Whats on your mind?</string>
    <string name="title_activity_proba">proba</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_user_profile">UserProfile</string>
    <string name="title_activity_edit_user_profile">EditUserProfile</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_friends_list">FriendsList</string>
    <string name="title_activity_friend_profile">FriendProfile</string>

    <string name="type">Select place type</string>
    <string-array name="place_type">
        <item> Private </item>
        <item> Club </item>
        <item> Tavern </item>
        <item> Beer House </item>
    </string-array>
    <string name="title_activity_search_by_atributes">SearchByAtributes</string>
    <string-array name="radius_values">
        <item> None </item>
        <item> 1 KM </item>
        <item> 5 KM </item>
        <item> 10 KM </item>
        <item> 20 KM </item>
        <item> 50 KM </item>
        <item> 100 KM </item>
    </string-array>

</resources>

