<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/theme"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AddNewPlace"
    tools:showIn="@layout/activity_add_new_place"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_margin="30dp"
        android:padding="10dp"
        android:background="#ABffffff"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="horizontal">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Select the type of place:"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textColorHint="@color/black"/>

        <Spinner
            android:dropDownWidth="wrap_content"
            android:textAlignment="center"
            android:layout_marginLeft="30dp"
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/place_type"
            android:prompt="@string/type"/>

        </LinearLayout>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editmyplace_lat_label"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textColorHint="@color/black"/>

        <EditText
            android:id="@+id/editmyplace_lat_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textColorHint="@color/black"
            android:backgroundTint="@color/black"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editmyplace_lon_label"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textColorHint="@color/black"/>

        <EditText
            android:id="@+id/editmyplace_lon_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textColorHint="@color/black"
            android:backgroundTint="@color/black"/>


        <Button
            android:id="@+id/editmyplace_location_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/editmyplace_location_label"
            android:backgroundTint="#E67B61"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editmyplace_name_label"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textColorHint="@color/black"/>

        <EditText
            android:id="@+id/editmyplace_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textColorHint="@color/black"
            android:backgroundTint="@color/black"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editmyplace_desc_label"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textColorHint="@color/black"/>

        <EditText
            android:id="@+id/editmyplace_desc_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textColorHint="@color/black"
            android:backgroundTint="@color/black"/>

        <Button
            android:id="@+id/editmyplace_finished_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#E67B61"
            android:text="ADD"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/editmyplace_cancel_button"
            android:text="@string/editmyplace_cancel_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#E67B61"
            android:textStyle="bold"
            android:textColor="@color/black"/>

    </LinearLayout>


</RelativeLayout>