<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".EditMyPlace"
    android:background="@drawable/profiles"
    tools:showIn="@layout/activity_edit_my_place"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_margin="30dp"
        android:padding="10dp"
        android:background="#ABffffff"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editmyplace_name_label"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textColorHint="@color/black"/>

        <EditText
            android:id="@+id/editmyplace_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textColorHint="@color/black"
            android:backgroundTint="@color/black"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editmyplace_desc_label"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textColorHint="@color/black"/>

        <EditText
            android:id="@+id/editmyplace_desc_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textColorHint="@color/black"
            android:backgroundTint="@color/black"/>

        <Button
            android:id="@+id/editmyplace_change_image_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#E67B61"
            android:text="CHANGE IMAGE"
            android:textStyle="bold"
            android:textColor="@color/black"/>


        <Button
            android:id="@+id/editmyplace_finished_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#E67B61"
            android:text="SAVE"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/editmyplace_cancel_button"
            android:text="@string/editmyplace_cancel_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#E67B61"
            android:textStyle="bold"
            android:textColor="@color/black"/>

    </LinearLayout>

</RelativeLayout>